# fastapi-intermediate

./: .gitignore  README.md  compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile.dev  README.md  alembic.ini  main.py  pyproject.toml
backend/baseClass/: userBase.py
backend/controller/: auth.py  user.py
backend/migration/: env.py
backend/migration/versions/: 53aed43f5a70_adding_role_1_user_default.py  6cb6d67b2c89_adding_phone_field_in_user.py  94491e002b83_initiate.py
backend/router/: auth.py  user.py
backend/src/: main.py  test_main.py
backend/src/baseClass/: categoryBase.py  roleBase.py  userBase.py
backend/src/lib/: config.py  database.py  hash.py
backend/src/lib/dependency/: __init__.py  auth.py
backend/src/mvc/controller/: category.py  role.py
backend/src/mvc/controller/user/: __init__.py  auth.py  auth_dependency.py
backend/src/mvc/models/: __init__.py  base.py  category.py  role.py  user.py
backend/src/mvc/router/: auth.py  category.py  role.py  user.py
backend/src/utils/: utility.py
backend/src/utils/helpers/: __init__.py
backend/src/utils/operation/: __init__.py  list_filter.py
backend/src/utils/smtp/: __init__.py
backend/tests/: __init__.py  itest_auth.py  itest_role.py  itest_user.py  test_auth.py  test_hello.py  test_user.py
backend/tests/functions/: user_test_functions.py
backend/utils/: database.py  models.py
clientapp/: .eslintrc.json  Dockerfile.dev  README.md  config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
tests/: test_hello.py
(+153 files in other folders)
